move schemas to components
